packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
/**
 * scheme: "Tomorrow Night"
 * author: "Chris Kempson (http://chriskempson.com)"
 */
body[kui-theme="Dark"] {
    --color-base00: #13171A; /* Default Background */
    --color-base01: #202529; /* Lighter Background (Used for status bars) */
    --color-base02: #373b41; /* Selection Background */
    --color-base03: #373D42; 
    --color-base04: #565656; /* Dark Foreground (Used for status bars) */
    --color-base05: #9FA5AD; /* Default Foreground, Caret, Delimiters, Operators */
    --color-base06: #F2F4F8; /* Light Foreground (Not often used) */
    --color-base07: #ffffff; /* Light Background (Not often used) */
    --color-base08: #FB4B53; /* RED: Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted */
    --color-base09: #de935f; /* ORANGE: Integers, Boolean, Constants, XML Attributes, Markup Link Url */
    --color-base0A: #FDD13A; /* YELLOW: Classes, Markup Bold, Search Text Background */
    --color-base0B: #3DBB61; /* GREEN: Strings, Inherited Class, Markup Code, Diff Inserted */
    --color-base0C: #1999b3; /* CYAN: Support, Regular Expressions, Escape Characters, Markup Quotes */
    --color-base0D: #6CCAFF; /* BLUE: Functions, Methods, Attribute IDs, Headings */
    --color-base0E: #b294bb; /* MAGENTA: Keywords, Storage, Selector, Markup Italic, Diff Changed */
    --color-base0F: #a3685a; /* BROWN: Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?> */

    --color-light-red: hsla(357, 96%, 64%, 50%);
    --color-light-green: hsla(134, 43%, 52%, 50%);
    --color-light-yellow: hsla(46, 98%, 61%, 50%);

    --color-sidecar-header: var(--color-base03);
    --color-tag-beta-fill: #202529;
    --color-tag-beta-text: var(--color-text-01);

    --color-text-02: #A4A4A4;

    /* table header row */
    --color-ui-06: #373D42;
}

/* tomorrow-night hightlightjs theme */
.hljs-comment,.hljs-quote{color:#969896}.hljs-variable,.hljs-template-variable,.hljs-tag,.hljs-name,.hljs-selector-id,.hljs-selector-class,.hljs-regexp,.hljs-deletion{color:#cc6666}.hljs-number,.hljs-built_in,.hljs-builtin-name,.hljs-literal,.hljs-type,.hljs-params,.hljs-meta,.hljs-link{color:#de935f}.hljs-attribute{color:var(--color-support-03)}.hljs-string,.hljs-symbol,.hljs-bullet,.hljs-addition{color:#b5bd68}.hljs-title,.hljs-section{color:#81a2be}.hljs-keyword,.hljs-selector-tag{color:#b294bb}.hljs{display:block;overflow-x:auto;background:transparent;color:#c5c8c6;padding:0.5em}.hljs-emphasis{font-style:italic}.hljs-strong{font-weight:bold}

